[package]
name = "music_not_found"
authors = ["Simon Reitinger, k1190????@students.jku.at", "Johannes Schrott, k11904214@students.jku.at"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12" # for fancy, colored and formatted terminal output!!
clap = { version = "3.1.10", features = ["cargo", "derive"] }
dsp = "0.10.2" #for the hamming window!
glob = "0.3.0" # for foleder iteration
json = "0.12.4"
rustfft = "6.0.1" # for computation of stft
wav_io = "0.1.8" # for conviniently reading csvs.
conv = "*"
plotters = "^0.3.1"
find_peaks = "*"
convolve2d = "*"